统计bug
