# src/docs/swagger.json
@@ -76,7 +76,7 @@
                     {
                         "type": "string",
                         "description": "服务名",
-                        "name": "service",
+                        "name": "name",
                         "in": "query",
                         "required": true
                     }
@@ -118,7 +118,7 @@
                     {
                         "type": "string",
                         "description": "服务名",
-                        "name": "service",
+                        "name": "name",
                         "in": "query",
                         "required": true
                     }
